force-app/main/default/objects/Account/fields/AcctSeed__Default_Form_Category_Id__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Default_Form_Category_Id__c</fullName>
    <description>External reference to the default Form Category Id used for this account. This field should not be changed manually.</description>
    <externalId>true</externalId>
    <inlineHelpText>The DeveloperName to the default Form Category Id used for this account. This field should not be changed manually.</inlineHelpText>
    <label>Default Form Category Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>