force-app/main/default/objects/Account/fields/AcctSeed__X1099_Vendor__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__X1099_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Includes disbursements made to this vendor on 1099 reports and file export.</inlineHelpText>
    <label>1099 Vendor</label>
    <type>Checkbox</type>
</CustomField>