force-app/main/default/objects/Account/fields/Applicable_License__c.field-meta.xml
<CustomField>
    <fullName>Applicable_License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicable License</label>
    <referenceTo>BusinessLicense</referenceTo>
    <relationshipLabel>Accounts (Applicable License)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>