force-app/main/default/objects/Account/fields/Application_Current_Stage__c.field-meta.xml
<CustomField>
    <fullName>Application_Current_Stage__c</fullName>
    <description>This is hidden field used in development process of Register and Purchase.</description>
    <label>Application Current Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Personal Information</fullName>
            </value>
            <value>
                <fullName>Eligibility Test</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>