force-app/main/default/objects/Account/fields/Assigned_License__c.field-meta.xml
<CustomField>
    <fullName>Assigned_License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned License</label>
    <referenceTo>BusinessLicense</referenceTo>
    <relationshipLabel>Accounts (Assigned License)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>