force-app/main/default/objects/Account/fields/Business_License__c.field-meta.xml
<CustomField>
    <fullName>Business_License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business License</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.HiddenAccount__c</field>
            <operation>equals</operation>
            <valueField>BusinessLicense.AccountId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>BusinessLicense</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>