force-app/main/default/objects/Account/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <inlineHelpText>Email address who will get notification</inlineHelpText>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>