force-app/main/default/objects/Account/fields/FinServ__Status__c.field-meta.xml
<CustomField>
    <fullName>FinServ__Status__c</fullName>
    <inlineHelpText>Current Status of an account. Prospect,Prospect,Submission, Quote, Bound, Closed</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Submission</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Bound</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>