force-app/main/default/objects/Account/fields/Firm_Owner__c.field-meta.xml
<CustomField>
    <fullName>Firm_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Firm Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Firm Owner)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>