force-app/main/default/objects/Account/fields/HiddenAccount__c.field-meta.xml
<CustomField>
    <fullName>HiddenAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sponsored Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (HiddenAccount)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>