force-app/main/default/objects/Account/fields/IBC_Code__c.field-meta.xml
<CustomField>
    <fullName>IBC_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>IBC code of an account</inlineHelpText>
    <label>IBC Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Program_Audience__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>IBC Code</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Program_Audience__c</referenceTo>
    <relationshipLabel>Accounts (IBC Code)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>