force-app/main/default/objects/Account/fields/Insurance_Manager__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Insurance Manager)</relationshipLabel>
    <relationshipName>AdvisorAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>