force-app/main/default/objects/Account/fields/Is_ERP_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Is_ERP_Purchased__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is ERP Purchased?</label>
    <type>Checkbox</type>
</CustomField>