force-app/main/default/objects/Account/fields/Is_Firm_Insurance_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Is_Firm_Insurance_Purchased__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Firm Insurance Purchased?</label>
    <type>Checkbox</type>
</CustomField>