force-app/main/default/objects/Account/fields/Is_License_Eligibility_Failed__c.field-meta.xml
<CustomField>
    <fullName>Is_License_Eligibility_Failed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is License Eligibility Failed</label>
    <type>Checkbox</type>
</CustomField>