force-app/main/default/objects/Account/fields/Is_Policy_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Is_Policy_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Policy Cancelled?</label>
    <type>Checkbox</type>
</CustomField>