force-app/main/default/objects/Account/fields/Logo_Name__c.field-meta.xml
<CustomField>
    <fullName>Logo_Name__c</fullName>
    <label>Logo Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>