force-app/main/default/objects/Account/fields/NetRevenue__c.field-meta.xml
<CustomField>
    <fullName>NetRevenue__c</fullName>
    <inlineHelpText>Sum of closed won opportunities</inlineHelpText>
    <label>Net Revenue</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>