force-app/main/default/objects/Account/fields/Notifications__c.field-meta.xml
<CustomField>
    <fullName>Notifications__c</fullName>
    <label>Notifications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cancellation</fullName>
                <default>true</default>
                <label>Cancellation</label>
            </value>
            <value>
                <fullName>Non-Renewal</fullName>
            </value>
            <value>
                <fullName>&quot;Claim&quot; (Payment)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>