force-app/main/default/objects/Account/fields/Number_of_Licensed_Representatives__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Licensed_Representatives__c</fullName>
    <inlineHelpText>In addition to yourself, the applicant, how many other licensed representatives, including licensed assistants are employed by your Firm(s)?</inlineHelpText>
    <label>Number of Licensed Representatives</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>