force-app/main/default/objects/Account/fields/PersonContactID__c.field-meta.xml
<CustomField>
    <fullName>PersonContactID__c</fullName>
    <formula>CASESAFEID(PersonContact.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PersonContactID</label>
    <type>Text</type>
</CustomField>