force-app/main/default/objects/Account/fields/PPD_Status__c.field-meta.xml
<CustomField>
    <fullName>PPD_Status__c</fullName>
    <description>This Field is used by LWC product info component</description>
    <label>PPD Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>