force-app/main/default/objects/Account/fields/Program_Audience__c.field-meta.xml
<CustomField>
    <fullName>Program_Audience__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Program Audience of an account.</inlineHelpText>
    <label>Program Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Program_Audience__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Program Type</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Program_Audience__c</referenceTo>
    <relationshipLabel>Sponsored Company</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>