force-app/main/default/objects/Account/fields/Provinces__c.field-meta.xml
<CustomField>
    <fullName>Provinces__c</fullName>
    <inlineHelpText>In which provinces does your firm hold a license?</inlineHelpText>
    <label>Provinces</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alberta</fullName>
            </value>
            <value>
                <fullName>British Columbia</fullName>
            </value>
            <value>
                <fullName>Manitoba</fullName>
            </value>
            <value>
                <fullName>New Brunswick</fullName>
            </value>
            <value>
                <fullName>Newfoundland and Labrador</fullName>
            </value>
            <value>
                <fullName>Northwest Territories</fullName>
            </value>
            <value>
                <fullName>Nova Scotia</fullName>
            </value>
            <value>
                <fullName>Nunavut</fullName>
            </value>
            <value>
                <fullName>Ontario</fullName>
            </value>
            <value>
                <fullName>Prince Edward Island</fullName>
            </value>
            <value>
                <fullName>Quebec</fullName>
            </value>
            <value>
                <fullName>Saskatchewan</fullName>
            </value>
            <value>
                <fullName>Yukon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>