force-app/main/default/objects/Account/fields/Send_Policy_Document__c.field-meta.xml
<CustomField>
    <fullName>Send_Policy_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Policy Document</label>
    <type>Checkbox</type>
</CustomField>