force-app/main/default/objects/Account/fields/Suit__c.field-meta.xml
<CustomField>
    <fullName>Suit__c</fullName>
    <label>Suit #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>