force-app/main/default/objects/Account/fields/Total_Brokerage_Open_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Total_Brokerage_Open_Opportunities__c</fullName>
    <inlineHelpText>Sum of brokerage open opportunities</inlineHelpText>
    <label>Total Brokerage Open Opportunities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>