force-app/main/default/objects/Account/fields/Total_Brokerage_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Brokerage_Revenue__c</fullName>
    <inlineHelpText>Sum of retail commission of closed won opportunities</inlineHelpText>
    <label>Total Brokerage Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>