force-app/main/default/objects/Account/fields/Total_Firm_Rider_Premium2__c.field-meta.xml
<CustomField>
    <fullName>Total_Firm_Rider_Premium2__c</fullName>
    <description>Total firm rider premium purchased.</description>
    <label>Total Firm Rider Premium</label>
    <summarizedField>InsurancePolicy.PremiumAmount</summarizedField>
    <summaryFilterItems>
        <field>InsurancePolicy.Category__c</field>
        <operation>equals</operation>
        <value>Firm Rider Insurance Certificate</value>
    </summaryFilterItems>
    <summaryForeignKey>InsurancePolicy.NameInsuredId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>