force-app/main/default/objects/Account/fields/Total_Firm_Rider_Premium__c.field-meta.xml
<CustomField>
    <fullName>Total_Firm_Rider_Premium__c</fullName>
    <inlineHelpText>Total firm rider premium purchased by the advisor.</inlineHelpText>
    <label>Total Firm Rider Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>