force-app/main/default/objects/Account/fields/Total_Open_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Total_Open_Opportunities__c</fullName>
    <inlineHelpText>Sum of open opportunities</inlineHelpText>
    <label>Total Open Opportunities</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Closed Won, Closed Lost</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>