force-app/main/default/objects/Account/fields/Total_Premium__c.field-meta.xml
<CustomField>
    <fullName>Total_Premium__c</fullName>
    <description>Total Premium Purchased</description>
    <label>Total Premium</label>
    <summarizedField>InsurancePolicy.PremiumAmount</summarizedField>
    <summaryForeignKey>InsurancePolicy.NameInsuredId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>