force-app/main/default/objects/Account/fields/Total_Premium_Brok__c.field-meta.xml
<CustomField>
    <fullName>Total_Premium_Brok__c</fullName>
    <inlineHelpText>Total Premium sold by the brokerage firm</inlineHelpText>
    <label>Total Premium Brokerage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>